# tasks

./: CMakeLists.txt  dialog.ui  main.cpp  mainwindow.cpp  mainwindow.ui
1. Generating patterns/1/: 1.sln
1. Generating patterns/1/1/: 1.cpp  1.vcxproj  1.vcxproj.filters  sql_query_builder.cpp  sql_query_builder.h
1. Generating patterns/2/: 2.sln
1. Generating patterns/2/2/: 2.vcxproj  2.vcxproj.filters  sql_query_builder.cpp  sql_query_builder.h
1. Multithreading/1/: 1.sln
1. Multithreading/1/1/: 1.cpp  1.vcxproj
1. Multithreading/2/: 2.sln
1. Multithreading/2/2/: 2.cpp  2.vcxproj
2. Competition, the state of the race. Race condition/1/: 1.sln
2. Competition, the state of the race. Race condition/1/1/: 1.cpp  1.vcxproj
2. Competition, the state of the race. Race condition/2/: 2.sln
2. Competition, the state of the race. Race condition/3/: 3.sln
2. Structural patterns/1/: 1.sln
2. Structural patterns/1/1/: 1.cpp  (+1 more)
2. Structural patterns/2/: 2.sln
2/2/: 2.cpp  2.vcxproj
3. Asynchronous programming/1/: 1.sln
3. Asynchronous programming/2/: 2.sln
3. Behavioral patterns/1/: 1.sln
3. Behavioral patterns/2/: 2.sln
3. Behavioral patterns/3/: 3.sln
4. Refactoring/: .gitignore
4. Refactoring/1/: 1.sln
4. Widgets/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
5. Templates and functors/1/: 1.sln
5. Templates and functors/2/: 2.sln
5. Templates and functors/3/: 3.sln
6. STL. part 1/1/: 1.sln
6. STL. part 1/2/: 2.sln
7. STL. part 2/1/: 1.sln
7. STL. part 2/2/: 2.sln
MyProject/: CMakeLists.txt  Header.h  Source.cpp  main.cpp
(+57 files in other folders)
